[gd_scene load_steps=7 format=2]

[ext_resource path="res://Juego/HUD/Boton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Juego/HUD/MenuPausa.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.588235, 0.588235, 0.784314 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "Aclarar"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 8.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.509804, 0.509804, 0.509804, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.5
margin_top = -263.0
margin_right = 195.5
margin_bottom = 263.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.5
margin_top = -244.0
margin_right = 150.5
margin_bottom = 244.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPausa" type="Label" parent="Panel/VBoxContainer"]
margin_right = 301.0
margin_bottom = 106.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "PAUSA"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 112.0
margin_right = 301.0
margin_bottom = 116.0

[node name="Continuar" parent="Panel/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 122.0
margin_right = 301.0
margin_bottom = 209.0
text = "Continuar"

[node name="Reintentar" parent="Panel/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 215.0
margin_right = 301.0
margin_bottom = 302.0
text = "Reiniciar"

[node name="Opciones" parent="Panel/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 308.0
margin_right = 301.0
margin_bottom = 395.0
disabled = true
text = "Opciones"

[node name="Salir" parent="Panel/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 401.0
margin_right = 301.0
margin_bottom = 488.0
text = "Salir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Oscurecer = SubResource( 3 )

[node name="TimerReintentar" type="Timer" parent="."]
one_shot = true

[node name="TimerSalir" type="Timer" parent="."]
one_shot = true

[connection signal="button_up" from="Panel/VBoxContainer/Continuar" to="." method="_Boton_Continuar"]
[connection signal="button_up" from="Panel/VBoxContainer/Reintentar" to="." method="_Boton_Reintentar"]
[connection signal="button_up" from="Panel/VBoxContainer/Salir" to="." method="_Boton_Salir"]
[connection signal="timeout" from="TimerReintentar" to="." method="_Timer_Reintentar"]
[connection signal="timeout" from="TimerSalir" to="." method="_Timer_Salir"]
